Add feature flag to enable/disable Translate.

This allows the user to enable/disable the Translate popup, either in
chrome://flags, or by using the `--disable-features=TranslateUI`
command-line flag.

Bug: 770776
Change-Id: I66af0ce5de568bafb45e0e501cb4f481ac6d6fb3
Reviewed-on: https://chromium-review.googlesource.com/1105311
Commit-Queue: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Reviewed-by: Michael Martis <martis@chromium.org>
Reviewed-by: anthonyvd <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568860}
Former-commit-id: 9e5ff3d5d90764105ac0eef919f66b3406b64ffc