chrome/browser/about_flags.cc
@@ -1846,6 +1846,9 @@ const FeatureEntry kFeatureEntries[] = {
      flag_descriptions::kTranslateRankerEnforcementName,
      flag_descriptions::kTranslateRankerEnforcementDescription, kOsAll,
      FEATURE_VALUE_TYPE(translate::kTranslateRankerEnforcement)},
+    {"translate", flag_descriptions::kTranslateUIName,
+     flag_descriptions::kTranslateUIDescription, kOsAll,
+     FEATURE_VALUE_TYPE(translate::kTranslateUI)},
 #if BUILDFLAG(ENABLE_NATIVE_NOTIFICATIONS) && !defined(OS_CHROMEOS)
     {"enable-native-notifications",
      flag_descriptions::kNotificationsNativeFlagName,
