components/translate/core/browser/translate_prefs.cc
@@ -111,6 +111,9 @@ const base::Feature kRegionalLocalesAsDisplayUI{
 const base::Feature kTranslateRecentTarget{"TranslateRecentTarget",
                                            base::FEATURE_ENABLED_BY_DEFAULT};
 
+const base::Feature kTranslateUI{"TranslateUI",
+                                 base::FEATURE_ENABLED_BY_DEFAULT};
+
 DenialTimeUpdate::DenialTimeUpdate(PrefService* prefs,
                                    const std::string& language,
                                    size_t max_denial_count)
